# Open-Whisper--Speech-to-Text-with-OpenAI-Whisper

./: .env.example  .gitignore  CONTRIBUTING.md  FILES.md  FastSimple.vbs  LICENSE  QUICKSTART.md  README.md  SETUP_HISTORY.md  WINDOWS_INTEGRATION.md  WINDOWS_SETUP.md  app.py  app_with_grammer.py  app_with_settings.py  create_shortcuts.bat  find_paths.bat  pyproject.toml  remove_shortcuts.bat  run.bat  run.sh  run_grammer.bat  run_win.bat  run_with_settings.bat  setup.bat  setup.sh  setup_cuda.bat  start.bat
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
