[project]
name = "fast-simple"
version = "1.0.0"
description = "Simple speech-to-text transcription with OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "customtkinter",
    "sounddevice",
    "torch",
    "torchaudio",
    "pynput",
    "pyautogui",
    "pyperclip",
    "numpy",
]
