[project]
name = "fast-simple"
version = "1.0.0"
description = "Simple speech-to-text transcription with OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "customtkinter",
    "sounddevice",
    "torch",
    "torchaudio",
    "pynput",
    "pyautogui",
    "pyperclip",
    "numpy",
    "imageio-ffmpeg",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
